--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "alexa-discordian-date",
+  "author": "James McGuigan <james.mcguigan.github@gmail.com>",
   "description": "Amazon Echo Skill: Alexa discordian date",
   "version": "2.0.0",
+  "licence": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/JamesMcGuigan/alexa-discordian-date"
   },
-  "licence": "MIT",
+  "keywords": [
+    "ddate",
+    "date",
+    "discordian date",
+    "fnord"
+  ],
   "main": "index.js",
   "scripts": {
     "start": "npm run test; npm run build;",
