Final Publishing Information before Alexa Skill Submission

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "James McGuigan <james.mcguigan.github@gmail.com>",
   "description": "Amazon Echo Skill: Alexa discordian date",
   "version": "2.0.0",
-  "licence": "MIT",
+  "licence": "Ⓚ ALL RIGHTS REVERSED - Reprint what you like",
   "repository": {
     "type": "git",
     "url": "https://github.com/JamesMcGuigan/alexa-discordian-date"
